--- a/2023种子杯赛题.md
+++ b/2023种子杯赛题.md
@@ -40,7 +40,7 @@
 
 ### 障碍
 
-障碍分为可清除障碍和不可清除障碍，其中可清除障碍用🧱进行标识，不可清除障碍用 🍯、🏺、🌻、🟥、🟩、🟦进行标识
+障碍分为可清除障碍和不可清除障碍，其中不可清除障碍用🧱进行标识，可清除障碍用 🍯、🏺、🌻、🟥、🟩、🟦进行标识
 
 可清除障碍可以被爆炸种子💣破坏，并有一定概率掉落道具。
 
@@ -50,6 +50,8 @@
 
 初始爆炸范围为爆炸种子当前的格子和上下左右四个格子。每获得一个强力药水道具，爆炸范围向四个方向延展一格。
 
+<font color=red>爆炸种子的爆炸时间为5或者6回合</font>。
+
 ### 人物
 
 #### 属性
@@ -58,11 +60,11 @@
 
 玩家的初始血量上限为1，获得血量恢复道具后血量上限+1，最大血量上限为3，即当玩家的血量为3时，继续获得血量恢复道具并不会增加血量上限。当玩家受到爆炸种子的攻击后，血量-1。血量并不会随着时间自动恢复，当血量减少为0时，玩家游戏失败。
 
-玩家的初始移动速度为2，即两个回合可以移动一次，初赛不设置移速道具。
+<font color=red>玩家的初始行动速度为2，即一个回合可以采取两个动作</font>，初赛不设置速度相关的道具。
 
 #### 受伤后的无敌时间
 
-当玩家的血量减少时，玩家会获得一定的无敌时间，这个无敌时间为30回合。
+当玩家的血量减少时，玩家会获得一定的<font color=red>护盾时间，这个护盾时间为30回合</font>。
 
 ### 道具
 
@@ -139,3 +141,23 @@ class Emoji(Enum):
 ```
 
 如果你的终端无法显示上述某些表情，请你自行查阅相关文献**更换终端字体**。换一些Nerd风格的字体可能会对此有帮助。
+
+#### Tips
+
+> 这部分会填写一些本次开发上实用的技巧 ~~，并根据我的心情不定期更新~~
+
+##### 编辑器使用技巧
+
+* vscode
+  * 安装相应语言的扩展包后，按住``Ctrl``并将用鼠标点击某个变量或类型，则可以转到他的定义上，这对于阅读代码来说十分方便。
+  * 接上点，``Ctrl Alt -``（减号）可以跳回上一次光标所在的位置，对于查看变量类型后跳回原代码段十分方便。
+
+* vim/neovim
+  * ~~都用vim了应该不用我教了~~
+
+
+##### AI辅助代码工具
+
+* github-copliot
+  * 使用hust邮箱申请学生优惠即可白嫖，谁用谁说好
+  * vscode、vim都可以配置，vs没试过。
