--- a/client/python/test.ipynb
+++ b/client/python/test.ipynb
@@ -49,7 +49,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:  # update resp\n",
+    "            self.lock_interaction.acquire()\n",
+    "            if gContext[\"gameOverFlag\"] == True:\n",
+    "                flag = 0\n",
+    "            elif self.next_resp.data.round == self.cur_round:\n",
+    "                flag = 1\n",
+    "            else:\n",
+    "                flag = 0  \n",
+    "            self.lock_interaction.release()\n",
+    "            # print(flag)\n",
+    "            if flag:\n",
+    "                continue\n",
+    "            else:\n",
+    "                break"
+   ]
   }
  ],
  "metadata": {
