--- a/client/python/test2.ipynb
+++ b/client/python/test2.ipynb
@@ -450,6 +450,28 @@
    "source": [
     "torch.Tensor((1, 2, 3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "a.extend([c for c in range(1, 5)])\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
