--- a/client/python/test2.ipynb
+++ b/client/python/test2.ipynb
@@ -472,6 +472,27 @@
     "a.extend([c for c in range(1, 5)])\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/yu/codings/seed-cup/client/python'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
   }
  ],
  "metadata": {
