--- a/client/python/test2.ipynb
+++ b/client/python/test2.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,6 +493,63 @@
     "import os\n",
     "os.getcwd()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(torch.nn.Module):\n",
+    "\n",
+    "    def __init__(self, obs_size, n_act):\n",
+    "        super().__init__()\n",
+    "        self.mlp = self.__mlp(obs_size, n_act)\n",
+    "\n",
+    "    def __mlp(self, obs_size, n_act):\n",
+    "        return torch.nn.Sequential(\n",
+    "            torch.nn.Linear(obs_size, 512),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(512, 256),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(256, n_act)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x_map, x_player):\n",
+    "        x_map = torch.stack(x_map, dim=0)  # (B, 15, 15)\n",
+    "        B = x_map.shape[0]\n",
+    "        x_map = x_map.reshape((B, 1, -1)).squeeze(dim=1)  # (B, 225)\n",
+    "        print(x_map[0])\n",
+    "        print(x_map.shape)\n",
+    "        x_player = torch.stack(x_player, dim=0)  # (B, 15)\n",
+    "        print(x_player.shape)\n",
+    "        x = torch.concat((x_map, x_player), dim=1)\n",
+    "        print(x.shape)\n",
+    "\n",
+    "        return self.mlp(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = MLP(240, 36)\n",
+    "B = 3\n",
+    "x_map = tuple([torch.rand(size=(15, 15)) for _ in range(B)])\n",
+    "print(x_map[0])\n",
+    "x_player = tuple([torch.rand(15) for _ in range(B)])\n",
+    "res = net(x_map, x_player)\n",
+    "print(res.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
