--- a/client/python/test2.ipynb
+++ b/client/python/test2.ipynb
@@ -546,10 +546,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2), (1, 2), (1, 2), (1, 2), (1, 2), (1, 2), (1, 2), (1, 2), (1, 2), (1, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [(1,2)] *10\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num =10\n",
+    "a=[(1,1)]*num\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (10, 11)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.append((10,11))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b =[1,2,3,4,5]\n",
+    "print(b)\n",
+    "b.remove(b[0])\n",
+    "print(b)"
+   ]
   }
  ],
  "metadata": {
