--- a/client/python/SimpleCNN.ipynb
+++ b/client/python/SimpleCNN.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,10 +22,10 @@
     "        self.conv_output_dim = conv_output_dim\n",
     "        self.fc_output_dim = fc_output_dim\n",
     "\n",
-    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=8, kernel_size=3, stride=1, padding=1)\n",
+    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=3, kernel_size=2, stride=1)\n",
     "        self.relu = nn.ReLU()\n",
     "        self.maxpool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "        self.fc1 = nn.Linear(8 * 7 * 7, conv_output_dim)  # Adjust the output size based on your requirements\n",
+    "        self.fc1 = nn.Linear(3 * 7 * 7, conv_output_dim)  # Adjust the output size based on your requirements\n",
     "\n",
     "        self.fc2 = torch.nn.Linear(15, fc_output_dim)\n",
     "        self.relu2 = torch.nn.ReLU()\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
