--- a/client/python/test2.ipynb
+++ b/client/python/test2.ipynb
@@ -619,6 +619,36 @@
     "b.remove(b[0])\n",
     "print(b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error\n"
+     ]
+    }
+   ],
+   "source": [
+    "from enum import Enum\n",
+    "class Mapcode(Enum):#player  炸弹爆炸的时间没有编码？\n",
+    "    #矩阵中值对应的含义\n",
+    "    BlockRemovable = 20\n",
+    "    BlockUnRemovable = 21\n",
+    "\n",
+    "\n",
+    "\n",
+    "mapcode = [[Mapcode.BlockRemovable for _ in range(2)] for __ in range(2)]\n",
+    "\n",
+    "if mapcode[0][0] in (Mapcode.BlockRemovable.value,Mapcode.BlockUnRemovable):\n",
+    "    print('right')\n",
+    "else:\n",
+    "    print(\"error\")"
+   ]
   }
  ],
  "metadata": {
