--- a/2023种子杯赛题.md
+++ b/2023种子杯赛题.md
@@ -22,7 +22,7 @@
 
 ### 深入理解
 
-我们的冒险基于回合制，每回合你可以行动两次，系统会在每回合计算出当前状态返回给你；你的算法应当在200ms之内完成推理并采取行动，否则将会视为本回合你待在原地没有行动。
+我们的冒险基于回合制，每回合你可以行动两次，系统会在每回合计算出当前状态返回给你；你的算法应当在<font color=red>500ms</font>之内完成推理并采取行动，否则将会视为本回合你待在原地没有行动。
 
 初赛游戏时长为1200回合。
 
@@ -38,6 +38,8 @@
 
 玩家可以选择移动或者放置爆炸种子。其中移动仅能向上下左右四个方向进行移动，放置爆炸种子的位置默认为当前角色的位置。
 
+<font color=red>进行移动时如果前方有障碍物或者爆炸种子，则不会进行移动。但是两个玩家可以重合在一起。</font>
+
 ### 障碍
 
 障碍分为可清除障碍和不可清除障碍，其中不可清除障碍用🧱进行标识，可清除障碍用 🍯、🏺、🌻、🟥、🟩、🟦进行标识
@@ -50,7 +52,13 @@
 
 初始爆炸范围为爆炸种子当前的格子和上下左右四个格子。每获得一个强力药水道具，爆炸范围向四个方向延展一格。
 
-<font color=red>爆炸种子的爆炸时间为5或者6回合</font>。
+<font color=red>爆炸种子的爆炸时间为5或者6回合。
+
+玩家受到爆炸种子的攻击后血量将会-1。
+
+道具受到爆炸种子的攻击后将会消失。
+
+爆炸种子被另一颗爆炸种子攻击后，将会立即爆炸。</font>
 
 ### 人物
 
@@ -62,7 +70,7 @@
 
 <font color=red>玩家的初始行动速度为2，即一个回合可以采取两个动作</font>，初赛不设置速度相关的道具。
 
-#### 受伤后的无敌时间
+#### 受伤后的护盾时间
 
 当玩家的血量减少时，玩家会获得一定的<font color=red>护盾时间，这个护盾时间为30回合</font>。
 
@@ -90,6 +98,7 @@
 
 玩家获得胜利女神的道具后，玩家进入无敌状态，不受爆炸种子的伤害。若玩家在无敌状态下与敌方玩家的位置重合，则敌方玩家血量-1。胜利女神的效果持续15回合。
 
+<font color=red>若两个重合的玩家都属于无敌状态，则都不掉血。</font>
 
 ### 分数
 
