--- a/client/python/test.ipynb
+++ b/client/python/test.ipynb
@@ -21,6 +21,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next_position = [[0,-1],[0,1],[1,0],[-1,0]]\n",
+    "len(next_position)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -36,6 +64,25 @@
     "size = 7\n",
     "s = int(size/2)\n",
     "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ActionType.MOVE_LEFT\n"
+     ]
+    }
+   ],
+   "source": [
+    "from req import *\n",
+    "next_action = [ActionType.MOVE_LEFT,ActionType.MOVE_RIGHT,ActionType.MOVE_DOWN,ActionType.MOVE_UP]\n",
+    "print(next_action[0])"
    ]
   },
   {
@@ -82,6 +129,34 @@
     "    for j in range(7):\n",
     "        print(map1[i][j],end=' ')\n",
     "    print('')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from base import *\n",
+    "class ActionType(JsonIntEnum):\n",
+    "    \"\"\"Action space.\"\"\"\n",
+    "    SILENT = 0\n",
+    "    MOVE_LEFT = 1\n",
+    "    MOVE_RIGHT = 2\n",
+    "    MOVE_UP = 3\n",
+    "    MOVE_DOWN = 4\n",
+    "    PLACED = 5\n",
+    "\n",
+    "\n",
+    "print(int(ActionType.MOVE_DOWN))"
    ]
   }
  ],
